--- a/ClientPhone/Dialogs/RequestDialog.xaml
+++ b/ClientPhone/Dialogs/RequestDialog.xaml
@@ -7,8 +7,8 @@
         xmlns:controls="clr-namespace:CRMPhone.Controls"
         xmlns:viewModel="clr-namespace:CRMPhone.ViewModel"
         mc:Ignorable="d"
-        Title="Заявка" MinHeight="750" MaxHeight="750" MinWidth ="980" MaxWidth="980" Height="750" Width="980"
-        WindowStartupLocation="CenterOwner"
+        Title="Заявка" MinHeight="780" MinWidth ="980" MaxWidth="1920" Height="800" Width="{Binding WindowWidth, Mode=TwoWay}" Left="200" Top="40"
+        WindowStartupLocation="Manual"
         WindowStyle="ToolWindow"
         FontSize="12"
         d:DataContext="{d:DesignInstance viewModel:RequestDialogViewModel}">
@@ -19,13 +19,30 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="964"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <!--<Expander Grid.Row="0" Grid.Column="1" Grid.RowSpan="4"  IsExpanded="{Binding IsExpanded}">-->
+        <Grid Grid.Row="0" Grid.Column="1" Grid.RowSpan="4" Visibility="{Binding AdditionInfoVisibility}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="250"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <DockPanel Grid.Row="0">
+                <RichTextBox Name="InfoForAll" Margin="1" IsReadOnly="True" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible">
+                </RichTextBox>
+            </DockPanel>
+            <DockPanel Grid.Row="1">
+                <RichTextBox Name="FlowInfo" Margin="1" IsReadOnly="True" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible">
+                </RichTextBox>
+            </DockPanel>
+        </Grid>
+        <!--</Expander>-->
+        <StackPanel Grid.Row="0" Grid.Column="0">
             <WrapPanel>
                 <WrapPanel Margin="5"  >
                     <WrapPanel IsEnabled ="{Binding CanEdit}">
@@ -169,9 +186,9 @@
 
             </StackPanel>
         </StackPanel>
-        <StackPanel Grid.Row="1">
+        <StackPanel Grid.Row="1" Grid.Column="0">
             <TextBlock Margin ="3" Text="Контактные телефоны:"/>
-            <Button Margin ="3" Content="Добавить" Width="120" Command="{Binding AddContactCommand}" HorizontalAlignment="Left"/>
+            <Button Margin ="3" Content="Добавить" Width="120" IsEnabled ="{Binding CanEditPhone}" Command="{Binding AddContactCommand}" HorizontalAlignment="Left"/>
             <ListBox x:Name="ContactListBox"
                      HorizontalAlignment="Left" MaxHeight="100"
                      ItemsSource="{Binding ContactList}" 
@@ -204,16 +221,17 @@
                     <DataTemplate>
                         <StackPanel>
                             <DockPanel>
-                                <CheckBox Margin="3" VerticalAlignment="Center" Content="Осн." IsEnabled="{Binding DataContext.CanEdit, ElementName=RequestGrid}" IsChecked="{Binding IsMain}" Command="{Binding DataContext.ChangeCheckedStateCommand, ElementName=RequestGrid}"/>
-                                <TextBox Margin ="3" Width="125" Text="{Binding PhoneNumber}" IsReadOnly="{Binding DataContext.ReadOnly, ElementName=RequestGrid}"/>
-                                <CheckBox Margin="3" VerticalAlignment="Center" Content="Собств." IsEnabled="{Binding DataContext.CanEdit, ElementName=RequestGrid}" IsChecked="{Binding IsOwner}"/>
+                                <CheckBox Margin="3" VerticalAlignment="Center" Content="Осн." IsEnabled="{Binding DataContext.CanEditPhone, ElementName=RequestGrid}" IsChecked="{Binding IsMain}" Command="{Binding DataContext.ChangeCheckedStateCommand, ElementName=RequestGrid}"/>
+                                <TextBox Margin ="3" Width="125" Text="{Binding PhoneNumber}" IsReadOnly="{Binding ReadOnlyPhone}"/>
+                                <!--<TextBox Margin ="3" Width="125" Text="{Binding PhoneNumber}" IsReadOnly="{Binding DataContext.ReadOnlyPhone, ElementName=RequestGrid}"/>-->
+                                <CheckBox Margin="3" VerticalAlignment="Center" Content="Собств." IsEnabled="{Binding DataContext.CanEditPhone, ElementName=RequestGrid}" IsChecked="{Binding IsOwner}"/>
                                 <TextBlock Margin="3" VerticalAlignment="Center" Text="ФИО"/>
-                                <TextBox Margin ="3" Width="175" IsReadOnly="{Binding DataContext.ReadOnly, ElementName=RequestGrid}" HorizontalAlignment="Left" Text="{Binding Name}" />
-                                <TextBlock Margin="3" VerticalAlignment="Center" Text="e-mail"/>
-                                <TextBox Margin ="3" Width="100" IsReadOnly="{Binding DataContext.ReadOnly, ElementName=RequestGrid}" HorizontalAlignment="Left" Text="{Binding Email}" />
+                                <TextBox Margin ="3" Width="175" IsReadOnly="{Binding DataContext.ReadOnlyPhone, ElementName=RequestGrid}" HorizontalAlignment="Left" Text="{Binding Name}" />
+                                <!--<TextBlock Margin="3" VerticalAlignment="Center" Text="e-mail"/>
+                                <TextBox Margin ="3" Width="100" IsReadOnly="{Binding DataContext.ReadOnlyPhone, ElementName=RequestGrid}" HorizontalAlignment="Left" Text="{Binding Email}" />-->
                                 <TextBlock Margin="3" VerticalAlignment="Center" Text="примеч."/>
-                                <TextBox Margin ="3" Width="140" IsReadOnly="{Binding DataContext.ReadOnly, ElementName=RequestGrid}" HorizontalAlignment="Left" Text="{Binding AdditionInfo}" />
-                                <Button Margin="3"  Width="32" HorizontalAlignment="Right" IsEnabled ="{Binding DataContext.CanEdit, ElementName=RequestGrid}" Command="{Binding DataContext.DeleteCommand, ElementName=RequestGrid}">
+                                <TextBox Margin ="3" Width="140" IsReadOnly="{Binding DataContext.ReadOnlyPhone, ElementName=RequestGrid}" HorizontalAlignment="Left" Text="{Binding AdditionInfo}" />
+                                <Button Margin="3"  Width="32" HorizontalAlignment="Right" IsEnabled ="{Binding DataContext.CanEditPhone, ElementName=RequestGrid}" Command="{Binding DataContext.DeleteCommand, ElementName=RequestGrid}">
                                     <Image Source="pack://application:,,,/Images/button_delete.png" Width="16" Height="16" />
                                 </Button>
                             </DockPanel>
@@ -222,7 +240,7 @@
                 </ListBox.ItemTemplate>
             </ListBox>
         </StackPanel>
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="2" Grid.Column="0">
             <StackPanel>
                 <TextBlock Margin="3" Text="Заявки:"/>
                 <DockPanel>
@@ -230,7 +248,7 @@
                     <Button Margin ="3" Content="Информация по УК" Width="120" Command="{Binding GetScInfoCommand}"
                             HorizontalAlignment="Left"/>
                 </DockPanel>
-                <ListBox Name ="RequestList" Height="340"
+                <ListBox Name ="RequestList" Height="370"
                      ScrollViewer.CanContentScroll="False"
                      ItemsSource="{Binding Path=RequestList}" 
                      SelectedItem ="{Binding Path=SelectedRequest}"
@@ -262,7 +280,7 @@
             </ListBox>
             </StackPanel>
         </Grid>
-        <DockPanel Grid.Row="3">
+        <DockPanel Grid.Row="3" Grid.Column="0">
         </DockPanel>
     </Grid>
 </Window>
