--- a/CRMPhone/Dialogs/CallsHistoryDialog.xaml
+++ b/CRMPhone/Dialogs/CallsHistoryDialog.xaml
@@ -20,6 +20,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <DataGrid Name="RecordGrid" Margin="3"
                   AutoGenerateColumns="False"
@@ -152,7 +153,17 @@
                                     Binding="{Binding Path=Price}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <DockPanel Grid.Row="2">
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Margin="3" Text="Текст СМС:"/>
+            <TextBox Grid.Column="1" Margin="3" Text="{Binding SmsText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBlock Grid.Column="2" Margin="3" Text="{Binding SmsLen}"/>
+        </Grid>
+        <DockPanel Grid.Row="3">
             <Button Margin="5,10" Padding="5,3" HorizontalAlignment="Right" Command="{Binding Path=SendSmsToCitizenCommand}">Отправить СМС жильцу</Button>
             <Button Margin="5,10" Padding="5,3" HorizontalAlignment="Right" Command="{Binding Path=SendSmsToWorkerCommand}">Отправить СМС мастеру</Button>
             <Button Margin="5,10" Padding="5,3" HorizontalAlignment="Right" Command="{Binding Path=SendSmsToExecutorCommand}">Отправить СМС исполнителю</Button>
